fix: arabic css alignment

--- a/src/component/MyAccountOverlay/MyAccountOverlay.style.scss
+++ b/src/component/MyAccountOverlay/MyAccountOverlay.style.scss
@@ -1030,6 +1030,9 @@
         border-bottom: none;
         border-left: none;
         text-align: left;
+        &_isArabic{
+          text-align: right;
+        }
         .CountryMiniFlag {
           &-Container {
             margin-bottom: -36px;
@@ -1124,6 +1127,9 @@
         border-bottom: none;
         border-left: none;
         text-align: left;
+        &_isArabic{
+          text-align: right;
+        }
         .CountryMiniFlag {
           &-Container {
             margin-bottom: -36px;
