--- a/src/component/MyAccountOverlayV1/MyAccountOverlay.style.scss
+++ b/src/component/MyAccountOverlayV1/MyAccountOverlay.style.scss
@@ -1290,7 +1290,9 @@
         border-bottom: none;
         border-left: none;
         text-align: left;
-
+        &_isArabic{
+          text-align: right;
+        }
         .CountryMiniFlag {
           &-Container {
             margin-bottom: -36px;
@@ -1430,7 +1432,9 @@
         border-bottom: none;
         border-left: none;
         text-align: left;
-
+        &_isArabic{
+          text-align: right;
+        }
         .CountryMiniFlag {
           &-Container {
             margin-bottom: -36px;
